Fix margin on mobile

--- a/src/routes/global.scss
+++ b/src/routes/global.scss
@@ -27,9 +27,11 @@ body {
   margin-bottom: 40px;
   display: flex;
   justify-content: center;
+  margin-bottom: 80px;
 }
 
 .content {
   max-width: 768px;
   width: 100%;
+  margin: 1.5rem;
 }
